# ByDC

./: .editorconfig  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPOSITORY_NAMING.md  SECURITY.md  package-lock.json  package.json  plan.md  pyproject.toml  quality_report.md  temp_err.txt  temp_err2.txt  test_stream.py  whale_datacloud.code-workspace
datacloud-agent/: .env.example  README.md  pyproject.toml
datacloud-agent/docs/: 完善方案.md  项目框架搭建方案.md
datacloud-agent/docs/模块规范/: CODING_CONVENTIONS.md  TESTING_CONVENTIONS.md
datacloud-agent/docs/模块设计/: 超级分析智能体_模块设计.md
datacloud-agent/scripts/: README.md  start_with_ui.sh
datacloud-agent/scripts/content_writer/: agent.py  langgraph.json  run_agent.sh
datacloud-agent/src/datacloud-agent/: __init__.py  agent.py  bootstrap.py
datacloud-agent/src/datacloud_agent/: __init__.py
datacloud-agent/src/dc_agent/: __init__.py
datacloud-agent/tests/: CONVENTIONS.md  conftest.py  test_backend.py  test_client.py  test_config.py  test_model_config.py  test_prompts.py  test_queue_modes.py  test_queue_ops.py  test_queue_policies.py  test_registry.py  test_router.py  test_runner.py  test_session.py  test_steer.py  test_subagents.py  test_tenant.py
datacloud-agent/tests/datacloud-agent/: conftest.py
datacloud-agent/tests/datacloud_agent/: conftest.py  test_client.py  test_events.py  test_knowledge_tool.py  test_queue_types.py  test_real_api_integration.py  test_registry_deepagents.py  test_runner.py  test_runner_integration.py  test_session.py  test_steer.py  test_tools.py
datacloud-agent/tests/integration/: test_sdk_flow.py
datacloud-data-service/: .env.example  README.md  pyproject.toml
datacloud-data-service/config/: datasources.yaml.example
datacloud-data-service/docs/: 数据服务详细设计.md  数据服务详细设计2.0 copy.md  数据服务详细设计2.0.md  本地对象标准格式规范（JSON 、YAML 、OWL）.md
datacloud-data-service/docs/plans/: 2026-03-06-data-service-sdk-implementation.md  2026-03-06-ontology-to-core-flow-example-design.md  2026-03-07-data-service-sdk-implementation-v2.md  2026-03-08-connection-pool-config-design.md  2026-03-08-connection-pool-config-implementation.md  2026-03-08-m3-observability-v1-design.md  2026-03-08-m3-observability-v1-implementation.md  2026-03-08-m4-m5-knowledge-base-skills-api-design.md  2026-03-09-datasource-from-ontology-design.md  2026-03-09-feature-list-roadmap-full.md  2026-03-09-object-view-function-param-validation-design.md  2026-03-09-object-view-function-param-validation-implementation.md  2026-03-09-query-trace-console-and-file-design.md  2026-03-09-term-binding-and-api-bind-implementation.md  2026-03-09-term-resolution-debug-checklist.md
datacloud-data-service/scripts/: export_scene_json.py  migrate_ontology.py
datacloud-data-service/src/datacloud_data_sdk/: action.py  context.py  exceptions.py  object.py  relation.py  view.py
datacloud-data-service/src/datacloud_data_service/: config.py
datacloud-data-service/tests/: conftest.py
datacloud-data-service/tests/datacloud_data_sdk/: test_aggregator.py  test_api_executor.py  test_config_loader.py  test_context.py  test_db_sql_builder.py  test_dynamic_query_executor.py  test_event_handlers.py  test_exceptions.py  test_execution_object_converter.py  test_graphql_server.py  test_jdbc_parser.py  test_kb_executor.py  test_object_view_builder.py  test_ontology_loader.py  test_ontology_models.py  test_param_converter.py  test_plan_agent.py  test_plan_validator.py  test_pool_config.py  test_query_plan_generator.py  test_scenario_fixtures.py  test_sdk_entities.py  test_select_column_parser.py  test_sql_alias_quoter.py  test_sql_executor.py  test_sql_term_resolver.py  test_term_loader.py  test_term_resolver.py  test_trace_logger.py  test_tracing.py
datacloud-data-service/tests/datacloud_data_service/: test_health.py  test_mcp_tools_call_action.py  test_mcp_tools_list.py  test_rest_query.py  test_skills_api.py
datacloud-data-service/tests/e2e/: test_crm_scenarios.py
datacloud-data-service/tests/executor/: __init__.py
datacloud-data-service/tests/plan/: __init__.py
datacloud-data-service/tests/scripts/: test_export_scene_json.py
datacloud-data-service/tests/tools/: __init__.py
datacloud-data-service/tmp_sqlparse/sqlparse-0.5.5.dist-info/: RECORD
datacloud-mock/: .env.example  README.md  pyproject.toml
datacloud-mock/data/api/: README.md  query_execute_error.json  query_execute_success.json
datacloud-mock/data/examples/: README.md  sales_order_sample.csv  sales_product_sample.csv  user_profile_sample.csv
datacloud-mock/data/term_example/: domain.csv  term_name.csv  term_type.csv
datacloud-mock/docs/crm_demo/: 销售场景概述.md
datacloud-mock/scripts/: add_bo_bulk.py  convert_functions_to_post.py  fix_and_generate_crm_data.py  gen_attendance.py  gen_kpi_completion.py  generate_ontology.py
datacloud-mock/src/datacloud_mock/: __init__.py  main.py
examples/deepagent_bi/: .env_deepagent  AGENTS.md  agent.py  app.py  deepagents.toml  langgraph.json  proxy.py  pyproject.toml  restart.sh  start.sh
examples/deepagent_bi/owl_docs/: by_customer.md  by_opp_task.md  by_opportunity.md  by_project.md  by_project_task.md  by_rd_task.md  po_organization.md  po_users.md
examples/deepagent_bi/scripts/: generate_owl_docs.py
examples/deepagent_bi/tmp/: by_phone.json  exec_result.txt  product_object.json
examples/deepagent_bi/tools/: datacloud_tool.py  ontology_manager_tools.py  ontology_search_tool.py
examples/e_commerce_demo/backend/: .env.example  README.md  agent.py  checkpointer.py  langgraph.json  pyproject.toml  start.bat  start.sh
examples/sales_analysis_demo/mock_env/: .env.example  .gitignore  API_ROUTES.md  README.md  pyproject.toml
service/datacloud-agent-service/: README.md  __init__.py  config.py  deps.py  lifespan.py  openclaw_protocol.py  pyproject.toml  server.py  websocket.py
service/datacloud-agent-service/routers/: __init__.py  agents.py  chat.py  langgraph.py  sessions.py
service/datacloud-agent-service/scripts/: start.sh  (+1 more)
(+1020 files in other folders)
