[project]
name = "whale-datacloud"
version = "0.1.0"
description = "Whale DataCloud - A multi-service data platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Whale DataCloud Team" }
]
keywords = ["data", "cloud", "service", "platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# 根项目依赖（开发工具等）
dependencies = [
    "deepagents>=0.4.7",
    "langchain-openai>=1.1.11",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.48",
    "datacloud-data[sql,service]",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "langgraph-cli[inmem]>=0.2.0",
    "datacloud-analysis",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/whalecloud/whale-datacloud"
Repository = "https://github.com/whalecloud/whale-datacloud"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whale_datacloud"]

# ============================================
# Workspace 配置 - uv 多子项目管理
# ============================================
[tool.uv.workspace]
members = [
    "packages/datacloud-analysis",
    "packages/datacloud-data",
    "packages/datacloud-knowledge",
    "packages/datacloud-memory",
    "examples/e_commerce_demo/backend",
]

[tool.uv.sources]
# 声明 workspace 成员，供其他子项目依赖
datacloud-analysis = { workspace = true }
datacloud-data = { workspace = true }
datacloud-knowledge = { workspace = true }
datacloud-memory = { workspace = true }
datacloud-service = { workspace = true }
# by-framework（原 gateway-sdk）来自 by-framework-python 仓库（可编辑安装）
by-framework = { path = "../by-framework-python", editable = true }

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
explicit = false

# ============================================
# Ruff 配置 - 代码格式化和 lint
# 企业级配置 (2026)
# ============================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
extend-select = [
    "A",     # flake8-builtins - 禁止覆盖内置名
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez - 时区安全
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "G",     # flake8-logging-format
    "I",     # isort
    "LOG",   # flake8-logging
    "N",     # pep8-naming
    "PERF",  # perflint - 性能优化
    "PGH",   # pygrep-hooks - type:ignore 必须带代码
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RUF",   # ruff-specific rules
    "S",     # flake8-bandit - 安全检查
    "SIM",   # flake8-simplify
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TC",    # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops - 异常处理最佳实践
    "UP",    # pyupgrade - 现代语法
    "W",     # pycodestyle warnings
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments — 有时不可避免
    "PLR2004", # magic value comparison — 误报太多
    "TRY003",  # long exception messages — 有时更清晰
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================
# MyPy 配置 - 类型检查
# 企业级配置 (2026)
# ============================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# ============================================
# Pytest 配置 - 测试
# ============================================
[tool.pytest.ini_options]
testpaths = [
    "packages/datacloud-knowledge/tests/db",
    "packages/datacloud-knowledge/tests/ontology",
    "examples/sales_analysis_demo/mock_env/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "db_integration: requires reachable PostgreSQL/openGauss database (set DB_HOST/DB_PORT/DB_USER/DB_PASSWORD/DB_NAME)",
    "type1_schema: DDL schema tests",
    "type2_data: structured data load tests",
    "type3_api: API service tests",
    "type4_knowledge: knowledge ingest tests",
    "e2e: end-to-end smoke tests",
    "integration: requires external services",
]

[tool.coverage.run]
source = ["src"]
branch = true                          # 开启分支覆盖（if/else 两方向都要走到）
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 90                        # 行覆盖率低于 90% 时 CI 报错
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "def __repr__",
    "raise AssertionError",
    "^\\s*\\.\\.\\.\\s*$",            # 纯省略号行（抽象方法占位）
]
