[project]
name = "by-datacloud"
version = "0.1.1"
description = "Whale DataCloud - A multi-service data platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Whale DataCloud Team" }
]
keywords = ["data", "cloud", "service", "platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# 根项目依赖（单发行包聚合第三方依赖）
dependencies = [
    "aiochclient[aiohttp]>=2.0",
    "aiomysql>=0.2",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "boto3>=1.34",
    "by-framework>=0.1.2",
    "deepagents>=0.4.7",
    "fastapi>=0.115.0",
    "httpx>=0.27",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=2.0.0",
    "llama-index-embeddings-openai>=0.3.0",
    "matplotlib>=3.7",
    "mcp>=1.18.0",
    "networkx>=3.0",
    "numpy>=1.26",
    "opengauss-sqlalchemy>=2.4.0",
    "pandas>=2.0",
    "psycopg[binary,pool]>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pypinyin>=0.50",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "rdflib>=7.0",
    "sqlalchemy[asyncio]>=2.0",
    "sqlglot",
    "sqlparse>=0.5",
    "strawberry-graphql[fastapi]>=0.260",
    "python-multipart>=0.0.12",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "langgraph-cli[inmem]>=0.2.0",
    "datacloud-analysis",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/beyonai/by-datacloud"
Repository = "https://github.com/beyonai/by-datacloud"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/by_datacloud"]

[tool.hatch.build.targets.wheel.force-include]
"packages/datacloud-analysis/src/datacloud_analysis" = "datacloud_analysis"
"packages/datacloud-data/src/datacloud_data_sdk" = "datacloud_data_sdk"
"packages/datacloud-data/src/datacloud_data_service" = "datacloud_data_service"
"packages/datacloud-knowledge/src/datacloud_knowledge" = "datacloud_knowledge"

# ============================================
# Workspace 配置 - uv 多子项目管理
# ============================================
[tool.uv.workspace]
members = [
    "packages/datacloud-analysis",
    "packages/datacloud-data",
    "packages/datacloud-knowledge",
    "examples/e_commerce_demo/backend",
]

[tool.uv.sources]
# 声明 workspace 成员，供其他子项目依赖
datacloud-analysis = { workspace = true }
datacloud-data = { workspace = true }
datacloud-knowledge = { workspace = true }
datacloud-service = { workspace = true }

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
explicit = false

# ============================================
# Ruff 配置 - 代码格式化和 lint
# 企业级配置 (2026)
# ============================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
extend-select = [
    "A",     # flake8-builtins - 禁止覆盖内置名
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez - 时区安全
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "G",     # flake8-logging-format
    "I",     # isort
    "LOG",   # flake8-logging
    "N",     # pep8-naming
    "PERF",  # perflint - 性能优化
    "PGH",   # pygrep-hooks - type:ignore 必须带代码
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RUF",   # ruff-specific rules
    "S",     # flake8-bandit - 安全检查
    "SIM",   # flake8-simplify
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TC",    # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops - 异常处理最佳实践
    "UP",    # pyupgrade - 现代语法
    "W",     # pycodestyle warnings
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments — 有时不可避免
    "PLR2004", # magic value comparison — 误报太多
    "TRY003",  # long exception messages — 有时更清晰
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================
# MyPy 配置 - 类型检查
# 企业级配置 (2026)
# ============================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# ============================================
# Pytest 配置 - 测试
# ============================================
[tool.pytest.ini_options]
testpaths = [
    "packages/datacloud-knowledge/tests/db",
    "packages/datacloud-knowledge/tests/ontology",
    "examples/sales_analysis_demo/mock_env/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "db_integration: requires reachable PostgreSQL/openGauss database (set DB_HOST/DB_PORT/DB_USER/DB_PASSWORD/DB_NAME)",
    "type1_schema: DDL schema tests",
    "type2_data: structured data load tests",
    "type3_api: API service tests",
    "type4_knowledge: knowledge ingest tests",
    "e2e: end-to-end smoke tests",
    "integration: requires external services",
]

[tool.coverage.run]
source = ["src"]
branch = true                          # 开启分支覆盖（if/else 两方向都要走到）
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 90                        # 行覆盖率低于 90% 时 CI 报错
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "def __repr__",
    "raise AssertionError",
    "^\\s*\\.\\.\\.\\s*$",            # 纯省略号行（抽象方法占位）
]
