[project]
name = "datacloud-agent"
version = "0.1.0"
description = "DataCloud Agent - 超级分析智能体"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Whale DataCloud Team" }
]
keywords = ["agent", "langgraph", "ai", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "pydantic>=2.0",
    "datacloud-knowledge-service",
    "datacloud-data-service",
    "datacloud-memory",
    "pyyaml>=6.0.3",
    "deepagents>=0.4.7",
    "langgraph>=1.0.10",
    "langchain-openai>=1.1.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
datacloud-agent = "datacloud_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacloud_agent", "src/datacloud-agent"]

[tool.uv.sources]
# 声明 workspace 依赖来源
datacloud-knowledge-service = { workspace = true }
datacloud-data-service = { workspace = true }
datacloud-memory = { workspace = true }

[tool.uv]
default-groups = ["dev"]

# ============================================
# Ruff 配置
# ============================================
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================
# MyPy 配置
# ============================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
ignore_missing_imports = true

# ============================================
# Pytest 配置
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
