[project]
name = "datacloud-data-service"
version = "0.1.0"
description = "DataCloud Data Service & SDK - 本体驱动的数据查询与执行框架"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Whale DataCloud Team" }
]
keywords = ["data", "sql", "nl2data", "query", "ontology", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = ["langgraph>=0.2", "langchain-openai>=0.1"]
sql = ["sqlalchemy[asyncio]>=2.0", "aiomysql>=0.2", "aiosqlite>=0.19", "asyncpg>=0.29", "opengauss-sqlalchemy>=2.4.0", "sqlparse>=0.5"]
clickhouse = ["aiochclient[aiohttp]>=2.0"]
service = ["fastapi>=0.115.0", "uvicorn>=0.32.0", "pydantic-settings>=2.0", "pyyaml>=6.0"]
all = ["datacloud-data-service[langchain,sql,service]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacloud_data_sdk", "src/datacloud_data_service"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
