[project]
name = "deepagent-bi"
version = "0.1.0"
description = "DeepAgent + dataCloud BI 示例"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.5",
    "langchain>=1.2.3",
    "langchain-anthropic>=1.3.1",
    "langgraph>=1.0.6",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.2.2",
    "datacloud-data",
    "datacloud-analysis",
]

[tool.uv.sources]
datacloud-data = { path = "../../packages/datacloud-data", editable = true }
datacloud-analysis = { path = "../../packages/datacloud-analysis", editable = true }

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
pythonpath = ["."]
